feat: finish v1 demo, maybe change to svelte runes, but they're kinda cringe

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import Layout from "~/layouts/Layout.astro";
     </p>
 
     <img
-      src="https://external-preview.redd.it/lets-go-gambling-v0-YXU5MnEzaG05ZDRkMSGIS4axUWZowLVnCd8thNMr3b_1nRsetyv3AsS-Vryz.png?format=pjpg&auto=webp&s=9a12e70e472eb0eeccab7dc7f1e61ed414750dd7"
+      src="https://media1.tenor.com/m/kYK9cJcQR1oAAAAd/lets-go-gambling-good-ending.gif"
       alt="gambling"
-      class="rounded-lg shadow-xl max-w-md w-full hover:scale-105 transition-transform"
+      class="rounded-lg max-w-md w-full"
     />
   </div>
 </Layout>
